// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instance Selector Modal search and select instances successfully 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="padding-bottom: 20px; border-bottom: 1px solid #CDD3DD;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-large"
        >
          Select Instances
        </p>
        <p
          class="StyledProps--font StyledProps--main"
          style="margin-top: 15px;"
        >
          ce.co.autoStoppingRule.configuration.instanceModal.description
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="padding-bottom: 20px; padding-top: 20px; border-bottom: 1px solid #CDD3DD; justify-content: space-between;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
            disabled=""
            style="background-color: inherit; margin-right: 20px;"
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Add selected 
            </span>
          </button>
          <div>
            <span
              class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="refresh"
            >
              <svg
                data-icon="refresh"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  refresh
                </desc>
                <path
                  d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="margin: 0px 5px; cursor: pointer;"
            >
              Refresh
            </span>
          </div>
        </div>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon "
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 36px;"
            type="search"
            value="instance"
          />
          <span
            class="ExpandingSearchInput--btnWrapper  "
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-close"
              >
                <svg
                  height="8"
                  viewBox="0 0 14 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.6 7l5-5c.3-.2.4-.5.4-.8 0-.7-.5-1.2-1.2-1.2-.3 0-.6.1-.8.3l-5 5-5-5C1.8.1 1.5 0 1.2 0 .5 0 0 .5 0 1.2c0 .3.1.6.3.8l5 5-5 5c-.2.2-.3.5-.3.8 0 .7.5 1.2 1.2 1.2.3 0 .6-.1.8-.3l5-5 5 5c.2.2.5.4.8.4.6 0 1.2-.5 1.2-1.2 0-.3-.1-.6-.3-.8z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="table instancesTable"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 5%;"
            >
              
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 35%;"
            >
              ce.co.instanceSelector.name
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              ce.co.instanceSelector.ipAddress
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              regionLabel
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              typeLabel
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              status
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 5%;"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 35%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="overflow-wrap: anywhere; padding-right: 5px; --text-line-clamp: 3;"
                >
                  instance
                   
                  i-008
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  us-west-1
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 10%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  running
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main Pagination--text StyledProps--inline"
            >
              Showing 
              <strong>
                1
              </strong>
               of 
              <strong>
                1
              </strong>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Instance Selector Modal search and select instances successfully 2`] = `
<input
  type="checkbox"
/>
`;

exports[`Instance Selector Modal should show data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="padding-bottom: 20px; border-bottom: 1px solid #CDD3DD;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-large"
        >
          Select Instances
        </p>
        <p
          class="StyledProps--font StyledProps--main"
          style="margin-top: 15px;"
        >
          ce.co.autoStoppingRule.configuration.instanceModal.description
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="padding-bottom: 20px; padding-top: 20px; border-bottom: 1px solid #CDD3DD; justify-content: space-between;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
            disabled=""
            style="background-color: inherit; margin-right: 20px;"
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Add selected 
            </span>
          </button>
          <div>
            <span
              class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="refresh"
            >
              <svg
                data-icon="refresh"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  refresh
                </desc>
                <path
                  d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="margin: 0px 5px; cursor: pointer;"
            >
              Refresh
            </span>
          </div>
        </div>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon "
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="table instancesTable"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 5%;"
            >
              
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 35%;"
            >
              ce.co.instanceSelector.name
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              ce.co.instanceSelector.ipAddress
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              regionLabel
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              typeLabel
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              status
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 5%;"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 35%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="overflow-wrap: anywhere; padding-right: 5px; --text-line-clamp: 3;"
                >
                  instance
                   
                  i-008
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  us-west-1
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 10%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  running
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main Pagination--text StyledProps--inline"
            >
              Showing 
              <strong>
                1
              </strong>
               of 
              <strong>
                1
              </strong>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Instance Selector Modal should show loader while loading data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="padding-bottom: 20px; border-bottom: 1px solid #CDD3DD;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-large"
        >
          Select Instances
        </p>
        <p
          class="StyledProps--font StyledProps--main"
          style="margin-top: 15px;"
        >
          ce.co.autoStoppingRule.configuration.instanceModal.description
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="padding-bottom: 20px; padding-top: 20px; border-bottom: 1px solid #CDD3DD; justify-content: space-between;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
            disabled=""
            style="background-color: inherit; margin-right: 20px;"
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Add selected 
            </span>
          </button>
          <div>
            <span
              class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="refresh"
            >
              <svg
                data-icon="refresh"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  refresh
                </desc>
                <path
                  d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="margin: 0px 5px; cursor: pointer;"
            >
              Refresh
            </span>
          </div>
        </div>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon "
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
            data-icon="spinner"
          >
            <svg
              fill="none"
              height="24"
              viewBox="0 0 36 36"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                stroke="currentColor"
                stroke-dasharray="75,100"
                stroke-linecap="round"
                stroke-width="2.8"
                style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
